[gd_scene load_steps=5 format=3 uid="uid://dy6aot16krxbq"]

[ext_resource type="Texture2D" uid="uid://bo5ymcab8450s" path="res://Settings/assets/Menu.png" id="1_0cmel"]
[ext_resource type="Script" uid="uid://bxnm5xbouexjd" path="res://Settings/src/settings.gd" id="1_mlw3h"]
[ext_resource type="Theme" uid="uid://d264k6851ktxi" path="res://tres/test.tres" id="2_0cmel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlw3h"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Settings" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.277
anchor_top = 0.231
anchor_right = 0.758
anchor_bottom = 0.744
offset_left = -0.27999878
offset_top = -0.16000366
offset_right = -1.1199951
offset_bottom = -0.83999634
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_mlw3h")

[node name="MenuSprite" type="Sprite2D" parent="Settings"]
position = Vector2(154, 93)
texture = ExtResource("1_0cmel")

[node name="Timer" type="Timer" parent="Settings"]

[node name="Controls" type="Label" parent="Settings"]
layout_mode = 0
offset_left = 23.824005
offset_top = 11.528
offset_right = 113.824005
offset_bottom = 34.528
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Controls"

[node name="KeyBindLabels" type="VBoxContainer" parent="Settings/Controls"]
layout_mode = 0
offset_left = -4.924011
offset_top = 28.768005
offset_right = 59.175995
offset_bottom = 158.166

[node name="UpLabel" type="Label" parent="Settings/Controls/KeyBindLabels"]
layout_mode = 2
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
text = "UP"

[node name="DownLabel" type="Label" parent="Settings/Controls/KeyBindLabels"]
layout_mode = 2
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
text = "DOWN"

[node name="LeftLabel" type="Label" parent="Settings/Controls/KeyBindLabels"]
layout_mode = 2
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
text = "LEFT"

[node name="RightLabel" type="Label" parent="Settings/Controls/KeyBindLabels"]
layout_mode = 2
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
text = "RIGHT"

[node name="InteractLabel" type="Label" parent="Settings/Controls/KeyBindLabels"]
layout_mode = 2
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
text = "INTERACT"

[node name="PauseLabel" type="Label" parent="Settings/Controls/KeyBindLabels"]
layout_mode = 2
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
text = "PAUSE"

[node name="Dodge" type="Label" parent="Settings/Controls/KeyBindLabels"]
layout_mode = 2
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
text = "Dodge"

[node name="BasicAttackLabel" type="Label" parent="Settings/Controls/KeyBindLabels"]
layout_mode = 2
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
text = "Basic Attack"

[node name="OffHandAction" type="Label" parent="Settings/Controls/KeyBindLabels"]
layout_mode = 2
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
text = "OFF HAND ACTION"

[node name="KeyBindButtons" type="VBoxContainer" parent="Settings/Controls"]
layout_mode = 0
offset_left = 61.07599
offset_top = 28.768005
offset_right = 120.175995
offset_bottom = 151.472

[node name="Up" type="Button" parent="Settings/Controls/KeyBindButtons"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 8
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_constants/h_separation = 4
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mlw3h")
text = "UP"

[node name="Down" type="Button" parent="Settings/Controls/KeyBindButtons"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 8
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_constants/h_separation = 4
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mlw3h")
text = "Down"

[node name="Left" type="Button" parent="Settings/Controls/KeyBindButtons"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 8
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mlw3h")
text = "LEFT"

[node name="Right" type="Button" parent="Settings/Controls/KeyBindButtons"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 8
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mlw3h")
text = "RIGHT"

[node name="Interact" type="Button" parent="Settings/Controls/KeyBindButtons"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 8
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mlw3h")
text = "F"

[node name="Pause" type="Button" parent="Settings/Controls/KeyBindButtons"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 8
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mlw3h")
text = "P"

[node name="Dodge" type="Button" parent="Settings/Controls/KeyBindButtons"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 8
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_constants/h_separation = 4
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mlw3h")
text = "Shift"

[node name="BasicAttack" type="Button" parent="Settings/Controls/KeyBindButtons"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 8
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mlw3h")
text = "Left-Click"

[node name="OffHandAction" type="Button" parent="Settings/Controls/KeyBindButtons"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 8
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_mlw3h")
text = "RIGHT-CLICK"

[node name="Sound" type="Label" parent="Settings"]
layout_mode = 0
offset_left = 170.824
offset_top = 10.528
offset_right = 260.824
offset_bottom = 33.528
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Sound"

[node name="SoundSliders" type="VBoxContainer" parent="Settings/Sound"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.899
anchor_top = -0.42400002
anchor_right = -1.899
anchor_bottom = -0.42400002
offset_left = 170.91
offset_top = 34.752
offset_right = 230.086
offset_bottom = 66.224

[node name="SoundEffects" type="HSlider" parent="Settings/Sound/SoundSliders"]
layout_mode = 2

[node name="Music" type="HSlider" parent="Settings/Sound/SoundSliders"]
layout_mode = 2

[node name="SoundLabels" type="VBoxContainer" parent="Settings/Sound"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.9020001
anchor_top = -0.43500003
anchor_right = -1.9020001
anchor_bottom = -0.43500003
offset_left = 237.18001
offset_top = 36.005
offset_right = 287.18
offset_bottom = 76.005005

[node name="SoundEffects" type="Label" parent="Settings/Sound/SoundLabels"]
layout_mode = 2
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
text = "Sound Effects"

[node name="Music" type="Label" parent="Settings/Sound/SoundLabels"]
layout_mode = 2
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
text = "Music"

[node name="Display" type="Label" parent="Settings"]
layout_mode = 0
offset_left = 171.824
offset_top = 84.528
offset_right = 261.824
offset_bottom = 107.528
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Display"

[node name="DisplayLabels" type="VBoxContainer" parent="Settings/Display"]
layout_mode = 0
offset_left = 71.0
offset_top = 20.0
offset_right = 113.0
offset_bottom = 60.0

[node name="Brightness" type="Label" parent="Settings/Display/DisplayLabels"]
layout_mode = 2
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
text = "Brightness"

[node name="Resolution" type="Label" parent="Settings/Display/DisplayLabels"]
layout_mode = 2
theme = ExtResource("2_0cmel")
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
text = "Resolution"

[node name="DisplayControls" type="VBoxContainer" parent="Settings/Display"]
layout_mode = 0
offset_top = 20.0
offset_right = 57.0
offset_bottom = 60.0

[node name="Brightness" type="HSlider" parent="Settings/Display/DisplayControls"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="Settings/Display/DisplayControls"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "640x360"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "Fullscreen"
popup/item_2/id = 2

[connection signal="timeout" from="Settings/Timer" to="Settings" method="_on_timer_timeout"]
